AC_INIT([sudoku], [0,1], [swiesenhuetter@gmail.com])
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([ConsoleApp/ConsoleApp.cpp])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_MACRO_DIRS([m4])

AC_PROG_CXX
AC_PROG_CC
AC_LANG_PUSH(C++)

AC_C_INLINE
AC_TYPE_SIZE_T

AC_CONFIG_FILES([Makefile ConsoleApp/Makefile])
AC_OUTPUT
